# txtextracteval

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config_basic.yaml  config_easyocr_test.yaml  config_gemini.yaml  config_hf.yaml  config_llms.yaml  config_ollama.yaml  config_tess.yaml  config_transform.yaml
src/txtextracteval/: __init__.py  cli.py  config.py  runner.py
src/txtextracteval/extractors/: __init__.py  base.py  easyocr_engine.py  hf.py  llm_api.py  tesseract.py
src/txtextracteval/metrics/: __init__.py  accuracy.py
src/txtextracteval/report/: __init__.py  markdown.py  plot_utils.py
src/txtextracteval/transforms/: __init__.py  opencv_transforms.py
tests/: test_config.py  test_easyocr_extractor.py  test_extractors.py  test_metrics.py  test_report.py  test_runner.py  test_transforms.py
